test/org/midica/testfiles/failing/oto-duplicate-option-m.midica
INCLUDE inc/instruments.midica

1: c (m,q=2) (m) d
